# CADEX

./: .clang-format  CMakeLists.txt  README.md  main.cpp
Apps/: headers.hpp  main.cpp
Apps/inc/TestTask/: test_task.hpp
Apps/inc/TestTask/ByBasicCurves/: with_omp.hpp  without_omp.hpp
Apps/inc/TestTask/General/: constants.hpp  functions.hpp
Apps/src/TestTask/: test_task.cpp
Apps/src/TestTask/ByBasicCurves/: with_omp.cpp  without_omp.cpp
Apps/src/TestTask/General/: constans.cpp  functions.cpp
Curves_dll/: CMakeLists.txt  headers.hpp
Curves_dll/inc/Curves/BasicCurves/: circle.hpp  curve.hpp  ellipse.hpp  spiral.hpp
Curves_dll/inc/Curves/Structes/: vector3d.hpp
Curves_dll/src/Curves/BasicCurves/: circle.cpp  curve.cpp  ellipse.cpp  spiral.cpp
Curves_dll/src/Curves/Structes/: limiting_coefficients_of_curves.cpp
curves/: CMakeLists.txt  headers.hpp
curves/inc/: circle.hpp  curve.hpp  ellipse.hpp  limitations.hpp  point3d.hpp  spiral.hpp  vector3d.hpp
curves/inc/general/: vector3d.hpp
curves/inc/natural/: circle.hpp  curve.hpp  description.md  ellipse.hpp  spiral.hpp
curves/src/: circle.cpp  curve.cpp  ellipse.cpp  limitations.cpp  spiral.cpp
curves/src/general/: limitations.cpp
curves/src/natural/: circle.cpp  curve.cpp  ellipse.cpp  spiral.cpp
inc/: headers.hpp  point3d.hpp
inc/Curves/: limiting_coefficients_of_curves.hpp
inc/Curves/BasicCurves/: circle.hpp  curve.hpp  description.md  ellipse.hpp  spiral.hpp
inc/Curves/Structes/: point3d.hpp
inc/TestTask/: test_task.hpp
main/: headers.hpp  main.cpp
main/example_by_curves/inc/general/: constants.hpp
main/example_by_curves/inc/natural/: functions.hpp  functions_not_omp.hpp  functions_omp.hpp
main/example_by_curves/src/general/: constans.cpp
main/example_by_curves/src/natural/: functions.cpp  functions_not_omp.cpp  functions_omp.cpp
main/inc/: constants.hpp  functions.hpp  functions_not_omp.hpp  functions_omp.hpp
main/src/: constans.cpp  functions.cpp  functions_not_omp.cpp  functions_omp.cpp
src/Curves/: limiting_coefficients_of_curves.cpp
src/Curves/BasicCurves/: circle.cpp  curve.cpp  ellipse.cpp  spiral.cpp
src/Curves/Structes/: limiting_coefficients_of_curves.cpp
src/TestTask/: test_task.cpp
